# CognitivePipelines

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  ISSUES.md  Parallel_Execution_Feasibility.md  README.md  accounts.json.example  debug_markdown_test.cpp  debug_release.sh  notarize_and_package.sh  py_chunks.txt  resources.qrc  test_bowie_table.cpp  test_markdown_output.sh  test_split_behavior.cpp  vcpkg-configuration.json  vcpkg.json
.github/actions/linux-release/: action.yml
.github/actions/macos-release/: action.yml
.github/actions/windows-release/: action.yml
.github/workflows/: build.yml  build_release.yml  package-cleanup.yml
.junie/: guidelines.md
docs/: ScopeNodes_Implementation.md  ScopeNodes_UserGuide.md  UniversalScriptHost_Strategy.md  UniversalScript_UserGuide.md  model_catalog_config.md  node_operational_review.md  node_output_conventions.md
include/: CommonDataTypes.h  ExecutionToken.h  IScriptHost.h  IToolConnector.h  IToolNode.h  StringUtils.h
packaging/linux/: CognitivePipelines.desktop  integration_tests.desktop  unit_tests.desktop
packaging/macos/: CognitivePipelines.entitlements  CognitivePipelines.icns  Info.plist.in  QtWebEngineProcess.entitlements  codesign_qtwebengine_helpers.cmake
packaging/windows/: app.rc
resources/: model_caps.json  resources.qrc
resources/mermaid/: template.html
src/: ConditionalRouterNode.cpp  ConditionalRouterNode.h  ConditionalRouterPropertiesWidget.cpp  ConditionalRouterPropertiesWidget.h  CredentialsDialog.cpp  CredentialsDialog.h  CredentialsEditorDialog.cpp  CredentialsEditorDialog.h  DatabaseConnector.cpp  DatabaseConnector.h  DatabaseConnectorPropertiesWidget.cpp  DatabaseConnectorPropertiesWidget.h  ExecutionAwarePainters.cpp  ExecutionAwarePainters.h  ExecutionEngine.cpp  ExecutionEngine.h  ExecutionIdUtils.h  ExecutionScriptHost.cpp  ExecutionScriptHost.h  ExecutionState.h  GoogleLLMConnector.cpp  GoogleLLMConnector.h  GoogleLLMConnectorPropertiesWidget.cpp  GoogleLLMConnectorPropertiesWidget.h  HumanInputNode.cpp  HumanInputNode.h  HumanInputPropertiesWidget.cpp  HumanInputPropertiesWidget.h  IToolConnector.h  ImageGenNode.cpp  ImageGenNode.h  ImageGenPropertiesWidget.cpp  ImageNode.cpp  ImageNode.h  ImagePropertiesWidget.cpp  ImagePropertiesWidget.h  LLMConnector.cpp  LLMConnector.h  LLMConnectorPropertiesWidget.cpp  LLMConnectorPropertiesWidget.h  (+80 more)
src/ai/backends/: AnthropicBackend.cpp  AnthropicBackend.h  GoogleBackend.cpp  GoogleBackend.h  ILLMBackend.h  OllamaBackend.cpp  OllamaBackend.h  OpenAIBackend.cpp
src/ai/capabilities/: ModelCaps.cpp  ModelCaps.h  ModelCapsRegistry.cpp  ModelCapsRegistry.h
src/ai/catalog/: ModelCatalogService.cpp  ModelCatalogService.h
src/ai/registry/: LLMProviderRegistry.cpp
src/app/: MainWindow.cpp  MainWindow.h  main.cpp
src/app/dialogs/: AboutDialog.cpp  CredentialsDialog.cpp  ProviderManagementDialog.cpp  ProviderManagementDialog.h  SyntaxHighlightingOptionsDialog.cpp  SyntaxHighlightingOptionsDialog.h  UserInputDialog.cpp  UserInputDialog.h
src/backends/: AnthropicBackend.cpp  AnthropicBackend.h  GoogleBackend.cpp  GoogleBackend.h  ILLMBackend.h  OpenAIBackend.cpp  OpenAIBackend.h
src/chunkingstrategies/: MarkdownChunker.cpp  MarkdownChunker.h  StandardCodeChunker.cpp  StandardCodeChunker.h
src/core/: DocumentLoader.cpp  DocumentLoader.h  LLMProviderRegistry.cpp  LLMProviderRegistry.h  RagUtils.cpp  RagUtils.h  TextChunker.cpp  TextChunker.h
src/execution/: ExecutionEngine.cpp  ExecutionEngine.h  ExecutionIdUtils.h  ExecutionStateModel.cpp  ExecutionStateModel.h
src/graph/: ExecutionAwarePainters.cpp  ExecutionAwarePainters.h  NodeGraphModel.cpp  NodeGraphModel.h  NodeInfoWidget.cpp  NodeInfoWidget.h  ToolNodeDelegate.cpp  ToolNodeDelegate.h
src/logging/: Logger.cpp  Logger.h  LoggingCategories.cpp  LoggingCategories.h
src/nodes/ai/image_generation/: ImageGenNode.cpp  ImageGenNode.h  ImageGenPropertiesWidget.cpp  ImageGenPropertiesWidget.h
src/nodes/ai/universal_llm/: UniversalLLMNode.cpp  UniversalLLMNode.h  UniversalLLMPropertiesWidget.cpp  UniversalLLMPropertiesWidget.h
src/nodes/control_flow/conditional_router/: ConditionalRouterNode.h  (+1 more)
src/retrieval/chunking/: ChunkerStrategy.h  MarkdownChunker.cpp  MarkdownChunker.h  StandardCodeChunker.cpp  StandardCodeChunker.h  TextChunker.cpp  TextChunker.h
src/retrieval/documents/: DocumentLoader.cpp  DocumentLoader.h
src/retrieval/storage/: RagUtils.cpp  RagUtils.h
src/scripting/bridges/: ScriptDatabaseBridge.h
src/scripting/highlighting/: ScriptEditorWidget.cpp  ScriptEditorWidget.h  ScriptHighlighterConfig.cpp  ScriptHighlighterConfig.h  ScriptSyntaxHighlighter.cpp  ScriptSyntaxHighlighter.h
src/scripting/hosts/: ExecutionScriptHost.cpp
src/scripting/runtimes/: CrexxRuntime.cpp  CrexxRuntime.h  QuickJSRuntime.cpp  QuickJSRuntime.h
tests/: ScriptDatabaseBridgeTest.cpp  ScriptNodeIntegrationTest.cpp  test_anthropic_chat.cpp  test_anthropic_foundation.cpp  test_api_key_search.cpp  test_app.h  test_app_init.cpp  test_backend_discovery.cpp  test_chunker_viz.cpp  test_conditional_router.cpp  test_crexx_controller_node.cpp  test_crexx_runtime.cpp  test_document_loader.cpp  test_dynamic_discovery.cpp  test_execution_control.cpp  test_execution_engine.cpp  test_execution_host.cpp  test_google_llm_connector.cpp  test_image_node.cpp  test_ingest_input.cpp  test_integration.cpp  test_invalid_model_pipeline.cpp  test_llm_api_client.cpp  test_logging.cpp  test_loop_integration.cpp  test_loop_node.cpp  test_loop_until.cpp  test_main.cpp  test_matrix.cpp  test_mermaid_node.cpp  test_mermaid_repro.cpp  test_model_caps.cpp  test_model_selection.cpp  test_nodes.cpp  test_pdf_node.cpp  test_process_connector.cpp  test_process_node.cpp  test_quickjs_backend.cpp  test_rag.cpp  test_rag_foundation.cpp  (+16 more)
tests/TestGoogleLLMConnector/: TestGoogleLLMConnector.cpp
tests/fixtures/: model_caps_with_aliases.json
tests/integration/: MermaidRenderTest.cpp
tests/test_data/: bowie.md  fame.cob  golden_years.sql  heroes.rexx  major_tom.py  starman.txt  ziggie.cpp
(+92 files in other folders)
